--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Server.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NetworkServer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Server.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NetworkServer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
